Fix horizontal scroll

--- a/inertia/css/app.css
+++ b/inertia/css/app.css
@@ -12,3 +12,7 @@ option[selected] {
   background-color: #2563eb !important;
   color: #fff;
 }
+
+#app {
+  @apply overflow-x-hidden;
+}
